change font color

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ section {
  overflow: auto;
  padding-bottom: 60px;
  padding-top:30px;
- color: red;
+ color: blue;
 }
 footer {
  position: relative;
